salesforce/generated/sunrun_ingest_api/desktop-mf/objects/desktop_mf_Dim_Date__dll/fields/Date_Key__c.field-meta.xml
<CustomField>
    <fullName>Date_Key__c</fullName>
    <label>Date Key</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Date_Key</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Date</type>
</CustomField>